# birds-bugs-botanicals

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-site.yml
pipeline/: .env.example  .gitignore  Makefile  config.py  content_generator.py  image_reviewer.py  instagram_auth.py  main.py  net.py  pyproject.toml  requirements.txt  research.py  social_media.py  species_discovery.py  species_selector.py  tiktok_auth.py  video_generator.py
pipeline/data/: example_posts.json  hashtags.json  posted_history.json  rejected_species.json  species_pools.json
pipeline/evals/: checks.py  conftest.py  judge.py  run_evals.py  test_quality.py  test_structural.py
pipeline/evals/fixtures/: sample_eval_fixture.json
pipeline/tests/: conftest.py  test_content_footer.py  test_research_credit.py  test_species_discovery.py  test_species_selector.py  test_video_soundscape.py
site/: astro.config.mjs  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
site/api/: generate.py  login.py  photo-proxy.py  post.py
site/api/_lib/: config.py  net.py  webauth.py
site/api/auth/tiktok/: callback.py  login.py
site/public/: CNAME  ttverify
site/scripts/: copy-pipeline.mjs
site/src/layouts/: Base.astro  Legal.astro
site/src/pages/: app.astro  index.astro  privacy-policy.astro  terms-of-service.astro
site/tests/: conftest.py  test_api.py
