[project]
name = "birds-bugs-botanicals"
version = "0.1.0"
description = "Daily content pipeline for Birds, Bugs & Botanicals"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "wikipedia-api>=0.6.0",
    "wavespeed>=0.1.0",
    "static-ffmpeg>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
addopts = "-v"
